[Functions] Fixed bug when function hash overlaps other columns

--- a/src/components/Table/table.scss
+++ b/src/components/Table/table.scss
@@ -276,7 +276,12 @@
       }
 
       &-tag {
+        max-width: 150px;
         margin-left: 10px;
+
+        span {
+          display: inline;
+        }
       }
     }
   }
